--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,28 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 # stripped before adding them to the entity manager)
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+
+
+
+
+#常用配置
+########################################################
+###EMBEDDED SERVER CONFIGURATION (ServerProperties)
+########################################################
+#端口
+server.port=8080
+#server.address= # bind to a specific NIC
+#server.session-timeout= # session timeout in seconds
+#the context path, defaults to '/'
+#根路径
+#server.context-path=/sb
+#server.servlet-path= # the servlet path, defaults to '/'
+#server.tomcat.access-log-pattern= # log pattern of the access log
+#server.tomcat.access-log-enabled=false # is access logging enabled
+#server.tomcat.protocol-header=x-forwarded-proto # ssl forward headers
+#server.tomcat.remote-ip-header=x-forwarded-for
+#server.tomcat.basedir=/tmp # base dir (usually not needed, defaults to tmp)
+#server.tomcat.background-processor-delay=30; # in seconds
+#server.tomcat.max-threads = 0 # number of threads in protocol handler
+#server.tomcat.uri-encoding = UTF-8 # character encoding to use for URL decoding
