--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -73,4 +73,23 @@ server.port=8080
 #server.tomcat.max-threads = 0 # number of threads in protocol handler
 #server.tomcat.uri-encoding = UTF-8 # character encoding to use for URL decoding
 
+#关闭thymeleaf模版的缓存
+spring.thymeleaf.cache=false
 
+
+
+#freemarker模版配置
+spring.freemarker.allow-request-override=false
+spring.freemarker.cache=true
+spring.freemarker.check-template-location=true
+spring.freemarker.charset=UTF-8
+spring.freemarker.content-type=text/html
+spring.freemarker.expose-request-attributes=false
+spring.freemarker.expose-session-attributes=false
+spring.freemarker.expose-spring-macro-helpers=false
+#spring.freemarker.prefix=
+#spring.freemarker.request-context-attribute=
+#spring.freemarker.settings.*=
+#spring.freemarker.suffix=.ftl
+#spring.freemarker.template-loader-path=classpath:/templates/#comma-separatedlist
+#spring.freemarker.view-names= #whitelistofviewnamesthatcanberesolved
