--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -93,3 +93,22 @@ spring.freemarker.expose-spring-macro-helpers=false
 #spring.freemarker.suffix=.ftl
 #spring.freemarker.template-loader-path=classpath:/templates/#comma-separatedlist
 #spring.freemarker.view-names= #whitelistofviewnamesthatcanberesolved
+
+
+
+
+###REDIS (RedisProperties) redis基本配置；
+########################################################
+# database name
+spring.redis.database=0
+# server host1
+spring.redis.host=127.0.0.1  
+# server password
+#spring.redis.password=
+#connection port
+spring.redis.port=6379
+# pool settings ...
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=0
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
