--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+		
+		<!-- EHCACHE -->
+		<dependency>
+           <groupId>net.sf.ehcache</groupId>
+           <artifactId>ehcache</artifactId>
+       </dependency>
 
 	</dependencies>
 	<build>
