--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
 			<artifactId>spring-boot-starter-redis</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-data-redis</artifactId>
+		</dependency>
+
 		<!-- druid -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
@@ -72,12 +77,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-		
+
 		<!-- EHCACHE -->
 		<dependency>
-           <groupId>net.sf.ehcache</groupId>
-           <artifactId>ehcache</artifactId>
-       </dependency>
+			<groupId>net.sf.ehcache</groupId>
+			<artifactId>ehcache</artifactId>
+		</dependency>
 
 	</dependencies>
 	<build>
