--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
 			<artifactId>spring-session-data-redis</artifactId>
 		</dependency>
 
+		<!-- shiro spring. -->
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-spring</artifactId>
+			<version>1.2.2</version>
+		</dependency>
+		
 		<!-- druid -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
