配置多数据源

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,17 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.username = test1
 spring.datasource.password = 111111
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
+
+#多数据源
+custom.datasource.names=ds1
+#custom.datasource.ds1.type=com.zaxxer.hikari.HikariDataSource
+custom.datasource.ds1.driverClassName =com.mysql.jdbc.Driver
+custom.datasource.ds1.url=jdbc:mysql://localhost:3306/agriculture
+custom.datasource.ds1.username=test1
+custom.datasource.ds1.password=111111
+
+
+
  
 # 下面为连接池的补充设置，应用到上面所有数据源中
 # 初始化大小，最小，最大
